deploy/desperado-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: desperado-backend
  name: desperado-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: desperado-backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: desperado-backend
    spec:
      containers:
      - image: k3d-registry.localhost:5000/python-desperado:v0.2
        imagePullPolicy: Always
        name: python-desperado
        ports:
          - containerPort: 5000
        resources: {}
        volumeMounts:
          - name: config
            mountPath: /code/app/config
      volumes:
        - name: config
          configMap:
            name: cors-config
            items:
            - key: cors.txt
              path: cors.txt
status: {}
