deploy/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: desperado-backend
  name: desperado-backend
spec:
  ports:
  - name: backend
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: desperado-backend
  type: ClusterIP
status:
  loadBalancer: {}
