deploy/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-api
  creationTimestamp: null
spec:
  rules:
  - host: api.localhost
    http:
      paths:
      - backend:
          service:
            name: desperado-backend
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
